Added small-header and portfolio

--- a/angular-web-app/src/app/app.component.html
+++ b/angular-web-app/src/app/app.component.html
@@ -1,4 +1,6 @@
+<!-- Nav -->
 <app-nav></app-nav>
-<app-header></app-header>
+<!-- Outlet -->
 <router-outlet></router-outlet>
+<!-- Footer -->
 <app-footer></app-footer>
