--- a/angular-web-app/src/app/components/_home/home.component.html
+++ b/angular-web-app/src/app/components/_home/home.component.html
@@ -1,3 +1,6 @@
+<!-- Header -->
+<app-header></app-header>
+
 <!-- About-->
 <section class="page-section bg-primary" id="about">
   <div class="container">
