--- a/angular-web-app/src/app/components/_portfolio/portfolio.component.html
+++ b/angular-web-app/src/app/components/_portfolio/portfolio.component.html
@@ -1,1 +1,64 @@
-<p>portfolio works!</p>
+<!-- Header small -->
+<app-header-small [title]="title" [subTitle]="subTitle"></app-header-small>
+
+<!-- Portfolio-->
+<div id="portfolio">
+  <div class="container-fluid p-0">
+    <div class="row no-gutters">
+      <div class="col-lg-4 col-sm-6">
+        <a class="portfolio-box" href="#">
+          <img class="img-fluid" src="https://w.wallhaven.cc/full/39/wallhaven-3911w9.jpg" alt=""/>
+          <div class="portfolio-box-caption">
+            <div class="project-category text-white-50">Painting</div>
+            <div class="project-name">Made for someone</div>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <a class="portfolio-box" href="#">
+          <img class="img-fluid" src="https://w.wallhaven.cc/full/39/wallhaven-3911w9.jpg" alt=""/>
+          <div class="portfolio-box-caption">
+            <div class="project-category text-white-50">Painting</div>
+            <div class="project-name">Made for someone</div>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <a class="portfolio-box" href="#">
+          <img class="img-fluid" src="https://w.wallhaven.cc/full/39/wallhaven-3911w9.jpg" alt=""/>
+          <div class="portfolio-box-caption">
+            <div class="project-category text-white-50">Painting</div>
+            <div class="project-name">Made for someone</div>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <a class="portfolio-box" href="#">
+          <img class="img-fluid" src="https://w.wallhaven.cc/full/39/wallhaven-3911w9.jpg" alt=""/>
+          <div class="portfolio-box-caption">
+            <div class="project-category text-white-50">Painting</div>
+            <div class="project-name">Made for someone</div>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <a class="portfolio-box" href="#">
+          <img class="img-fluid" src="https://w.wallhaven.cc/full/39/wallhaven-3911w9.jpg" alt=""/>
+          <div class="portfolio-box-caption">
+            <div class="project-category text-white-50">Painting</div>
+            <div class="project-name">Made for someone</div>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <a class="portfolio-box" href="#">
+          <img class="img-fluid" src="https://w.wallhaven.cc/full/39/wallhaven-3911w9.jpg" alt=""/>
+          <div class="portfolio-box-caption">
+            <div class="project-category text-white-50">Painting</div>
+            <div class="project-name">Made for someone</div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
