--- a/angular-web-app/src/app/components/_portfolio/portfolio.component.html
+++ b/angular-web-app/src/app/components/_portfolio/portfolio.component.html
@@ -2,8 +2,8 @@
 <app-header-small [title]="title" [subTitle]="subTitle"></app-header-small>
 
 <!-- Portfolio-->
-<div id="portfolio">
-  <div class="container-fluid p-0">
+<div id="portfolio" class="over-header">
+  <div class="container-fluid">
     <div class="row no-gutters">
       <div class="col-lg-4 col-sm-6">
         <a class="portfolio-box" href="#">
@@ -16,7 +16,7 @@
       </div>
       <div class="col-lg-4 col-sm-6">
         <a class="portfolio-box" href="#">
-          <img class="img-fluid" src="https://w.wallhaven.cc/full/39/wallhaven-3911w9.jpg" alt=""/>
+          <img class="img-fluid" src="https://w.wallhaven.cc/full/dg/wallhaven-dg7y23.jpg" alt=""/>
           <div class="portfolio-box-caption">
             <div class="project-category text-white-50">Painting</div>
             <div class="project-name">Made for someone</div>
@@ -25,7 +25,7 @@
       </div>
       <div class="col-lg-4 col-sm-6">
         <a class="portfolio-box" href="#">
-          <img class="img-fluid" src="https://w.wallhaven.cc/full/39/wallhaven-3911w9.jpg" alt=""/>
+          <img class="img-fluid" src="https://w.wallhaven.cc/full/j5/wallhaven-j5zjoq.png" alt=""/>
           <div class="portfolio-box-caption">
             <div class="project-category text-white-50">Painting</div>
             <div class="project-name">Made for someone</div>
@@ -34,7 +34,7 @@
       </div>
       <div class="col-lg-4 col-sm-6">
         <a class="portfolio-box" href="#">
-          <img class="img-fluid" src="https://w.wallhaven.cc/full/39/wallhaven-3911w9.jpg" alt=""/>
+          <img class="img-fluid" src="https://w.wallhaven.cc/full/j5/wallhaven-j5zprq.jpg" alt=""/>
           <div class="portfolio-box-caption">
             <div class="project-category text-white-50">Painting</div>
             <div class="project-name">Made for someone</div>
@@ -43,7 +43,7 @@
       </div>
       <div class="col-lg-4 col-sm-6">
         <a class="portfolio-box" href="#">
-          <img class="img-fluid" src="https://w.wallhaven.cc/full/39/wallhaven-3911w9.jpg" alt=""/>
+          <img class="img-fluid" src="https://w.wallhaven.cc/full/j5/wallhaven-j5zzww.jpg" alt=""/>
           <div class="portfolio-box-caption">
             <div class="project-category text-white-50">Painting</div>
             <div class="project-name">Made for someone</div>
@@ -52,7 +52,7 @@
       </div>
       <div class="col-lg-4 col-sm-6">
         <a class="portfolio-box" href="#">
-          <img class="img-fluid" src="https://w.wallhaven.cc/full/39/wallhaven-3911w9.jpg" alt=""/>
+          <img class="img-fluid" src="https://w.wallhaven.cc/full/ey/wallhaven-eymker.jpg" alt=""/>
           <div class="portfolio-box-caption">
             <div class="project-category text-white-50">Painting</div>
             <div class="project-name">Made for someone</div>
