--- a/angular-web-app/src/app/components/_portfolio/portfolio.component.scss
+++ b/angular-web-app/src/app/components/_portfolio/portfolio.component.scss
@@ -4,6 +4,8 @@
 #portfolio .container-lg,
 #portfolio .container-xl {
   max-width: 1920px;
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 #portfolio .container-fluid .portfolio-box,
