Updated scss, added material module and home content

--- a/angular-web-app/src/app/app.component.html
+++ b/angular-web-app/src/app/app.component.html
@@ -1,6 +1,9 @@
 <!-- Nav -->
 <app-nav></app-nav>
-<!-- Outlet -->
-<router-outlet></router-outlet>
+<!-- Content -->
+<div id="site-content" class="theme-light">
+  <!-- Outlet -->
+  <router-outlet></router-outlet>
+</div>
 <!-- Footer -->
 <app-footer></app-footer>
