--- a/angular-web-app/src/app/components/_layout/nav/nav.component.html
+++ b/angular-web-app/src/app/components/_layout/nav/nav.component.html
@@ -1,5 +1,5 @@
 <!-- Navigation-->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+<nav class="navbar navbar-expand-md navbar-light fixed-top py-3" id="mainNav">
   <div class="container">
     <a class="navbar-brand js-scroll-trigger" routerLink="/home" routerLinkActive="router-link-active">Spavento</a>
     <button class="navbar-toggler navbar-toggler-right" type="button"
