--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -1,47 +1,124 @@
-/* You can add global styles to this file, and also import other style files */
+@import "variables";
+
+/*************************************/
+/**             Globals             **/
+/*************************************/
 
 html, body {
   width: 100%;
   height: 100%;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
-body {
-  margin: 0;
-  font-family: "Merriweather", "Helvetica Neue", sans-serif;
+.theme-light {
+  background-color: $color-light !important;
+  color: $color-dark !important;
+}
+
+.theme-dark {
+  background-color: $color-dark !important;
+  color: $color-light !important;
+}
+
+.page-section {
+  padding: 4rem 0;
+}
+
+.over-header {
+  margin-top: -5rem;
+  z-index: 99;
+}
+
+.flex-center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  height: 100%;
 }
 
 hr.divider {
   max-width: 3.25rem;
   border-width: 0.2rem;
-  border-color: #f4623a;
+  border-color: $color-accent;
 }
 
 hr.light {
-  border-color: #fff;
+  border-color: $color-light;
 }
 
-.btn {
-  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+.view {
+  position: relative;
+  overflow: hidden;
 }
 
-.btn-xl {
-  padding: 1.25rem 2.25rem;
-  font-size: 0.85rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  border: none;
-  border-radius: 10rem;
-}
+/*************************************/
+/**          Color Helpers          **/
+/*************************************/
 
-.page-section {
-  padding: 8rem 0;
+.section-primary {
+  background-color: $color-primary !important;
+  color: $color-light !important;
 }
-
-.text-white-75 {
-  color: rgba(255, 255, 255, 0.75);
+.section-accent {
+  background-color: $color-accent !important;
+  color: $color-light !important;
 }
-
-.over-header {
-  margin-top: -5rem;
-  z-index: 999;
+.section-light {
+  background-color: $color-light !important;
+  color: $color-dark !important;
+}
+.section-light2 {
+  background-color: $color-light2 !important;
+  color: $color-dark2 !important;
+}
+.section-dark {
+  background-color: $color-dark !important;
+  color: $color-light !important;
+}
+.section-dark2 {
+  background-color: $color-dark2 !important;
+  color: $color-light2 !important;
+}
+.bg-primary {
+  background-color: $color-primary !important;
+}
+.text-primary {
+  color: $color-primary !important;
+}
+.bg-accent {
+  background-color: $color-accent !important;
+}
+.txt-accent {
+  color: $color-accent !important;
+}
+.bg-light {
+  background-color: $color-light !important;
+}
+.txt-light {
+  color: $color-light !important;
+}
+.bg-light2 {
+  background-color: $color-light2 !important;
+}
+.txt-light2 {
+  color: $color-light2 !important;
+}
+.bg-dark {
+  background-color: $color-dark !important;
+}
+.txt-dark {
+  color: $color-dark !important;
+}
+.bg-dark2 {
+  background-color: $color-dark2 !important;
+}
+.txt-dark2 {
+  color: $color-dark2 !important;
 }
