--- a/angular-web-app/src/app/components/_home/home.component.html
+++ b/angular-web-app/src/app/components/_home/home.component.html
@@ -1,215 +1,15 @@
 <!-- Header -->
 <app-header></app-header>
 
-<section class="page-section">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-8 text-center pb-4">
-        <h2 class="my-0">Some title</h2>
-        <hr class="divider mt-4"/>
-      </div>
-    </div>
-  </div>
-  <div class="container mat-elevation-z4">
-    <div class="row pr-lg-5">
-      <div class="col-md-7 my-2">
-        <div class="view">
-          <img src="https://mdbootstrap.com/img/illustrations/graphics(4).png" class="img-fluid" alt="smaple image">
-        </div>
-      </div>
-      <div class="col-md-5 my-2 d-flex align-items-center">
-        <div>
-          <h3 class="font-weight-bold mb-4">Material Design Blocks</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adip elit. Maiores deleniti explicabo voluptatem quisquam nulla
-            asperiores aspernatur aperiam voluptate et consectetur minima delectus, fugiat eum soluta blanditiis
-            adipisci, velit dolore magnam.</p>
-          <button type="button" class="btn btn-orange btn-rounded mx-0">Download</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<app-services></app-services>
 
-<!-- About-->
-<section class="page-section section-primary" id="about">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-8 text-center">
-        <h2 class="text-white mt-0">Section primary</h2>
-        <hr class="divider light my-4"/>
-        <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in
-          no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-      </div>
-    </div>
-  </div>
-</section>
+<app-featured></app-featured>
 
-<!-- Featured-->
-<section class="page-section" id="featured">
-  <div class="container">
-    <h2 class="text-center mt-0">Featured</h2>
-    <hr class="divider my-4"/>
-    <div class="row">
-      <div class="col-lg-8 col-md-6">
-        <div class="view mt-5 mat-elevation-z4">
-          <img src="https://mdbootstrap.com/img/Photos/Others/img%20(29).jpg" class="img-fluid" alt="smaple image">
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 d-flex align-items-center">
-        <div class="mt-5">
-          <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-          <h3 class="h4 mb-2">Up to Date</h3>
-          <mat-divider class="my-2"></mat-divider>
-          <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<app-content-title></app-content-title>
 
+<app-latest></app-latest>
 
-<!-- Call to action -->
-<section class="page-section section-accent">
-  <div class="container text-center">
-    <h2 class="mb-4">Section Accent</h2>
-    <button mat-flat-button>Basic</button>
-    <button mat-flat-button color="primary">Primary</button>
-    <button mat-flat-button color="accent">Accent</button>
-    <button mat-flat-button color="warn">Warn</button>
-  </div>
-</section>
+<app-call-to-action></app-call-to-action>
 
-<!-- Latest-->
-<section class="page-section" id="latest">
-  <div class="container">
-    <h2 class="text-center mt-0">Latest</h2>
-    <hr class="divider my-4"/>
-    <div class="row">
-      <div class="col-lg-4 col-md-6">
-        <div class="mt-5">
-          <mat-card class="bg-light mat-elevation-z4">
-            <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-            <mat-card-content>
-              <p>
-                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                bred for hunting.
-              </p>
-            </mat-card-content>
-            <mat-card-actions>
-              <button mat-button>Details</button>
-            </mat-card-actions>
-          </mat-card>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="mt-5">
-          <mat-card class="bg-light mat-elevation-z4">
-            <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-            <mat-card-content>
-              <p>
-                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                bred for hunting.
-              </p>
-            </mat-card-content>
-            <mat-card-actions>
-              <button mat-button>Details</button>
-            </mat-card-actions>
-          </mat-card>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="mt-5">
-          <mat-card class="bg-light mat-elevation-z4">
-            <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-            <mat-card-content>
-              <p>
-                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                bred for hunting.
-              </p>
-            </mat-card-content>
-            <mat-card-actions>
-              <button mat-button>Details</button>
-            </mat-card-actions>
-          </mat-card>
-        </div>
-      </div>
-    </div>
-    <div class="text-center mt-5">
-      <a href="#!">Browse all posts</a>
-    </div>
-  </div>
-</section>
-
-<!-- Call to action-->
-<section class="page-section section-dark">
-  <div class="container text-center">
-    <h2 class="mb-4">Section Dark</h2>
-    <button mat-flat-button>Basic</button>
-    <button mat-flat-button color="primary">Primary</button>
-    <button mat-flat-button color="accent">Accent</button>
-    <button mat-flat-button color="warn">Warn</button>
-  </div>
-</section>
-
-<!-- Services-->
-<section class="page-section" id="services">
-  <div class="container">
-    <h2 class="text-center mt-0">Services</h2>
-    <hr class="divider my-4"/>
-    <div class="row">
-      <div class="col-lg-3 col-md-6 text-center">
-        <div class="mt-5">
-          <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-          <h3 class="h4 mb-2">Sturdy Themes</h3>
-          <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 text-center">
-        <div class="mt-5">
-          <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-          <h3 class="h4 mb-2">Up to Date</h3>
-          <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 text-center">
-        <div class="mt-5">
-          <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-          <h3 class="h4 mb-2">Ready to Publish</h3>
-          <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 text-center">
-        <div class="mt-5">
-          <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-          <h3 class="h4 mb-2">Made with Love</h3>
-          <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Call to action-->
-<section class="page-section section-dark2">
-  <div class="container text-center">
-    <h2 class="mb-4">Section Dark 2</h2>
-    <button mat-flat-button>Basic</button>
-    <button mat-flat-button color="primary">Primary</button>
-    <button mat-flat-button color="accent">Accent</button>
-    <button mat-flat-button color="warn">Warn</button>
-  </div>
-</section>
-
-<section class="page-section section-light2">
-  <div class="container text-center">
-    <h2 class="mb-4">Section Light 2</h2>
-    <button mat-flat-button>Basic</button>
-    <button mat-flat-button color="primary">Primary</button>
-    <button mat-flat-button color="accent">Accent</button>
-    <button mat-flat-button color="warn">Warn</button>
-  </div>
-</section>
+<app-call-to-action-divider></app-call-to-action-divider>
 
