--- a/angular-web-app/src/app/components/_portfolio/portfolio.component.scss
+++ b/angular-web-app/src/app/components/_portfolio/portfolio.component.scss
@@ -1,8 +1,6 @@
-#portfolio .container-fluid,
-#portfolio .container-sm,
-#portfolio .container-md,
-#portfolio .container-lg,
-#portfolio .container-xl {
+@import "../../../variables";
+
+.portfolio-container {
   max-width: 1920px;
   @media (min-width: 992px) {
     padding-left: 5rem;
@@ -10,20 +8,22 @@
   }
 }
 
-#portfolio .container-fluid .portfolio-box,
-#portfolio .container-sm .portfolio-box,
-#portfolio .container-md .portfolio-box,
-#portfolio .container-lg .portfolio-box,
-#portfolio .container-xl .portfolio-box {
+.portfolio-box {
   position: relative;
   display: block;
+  height: 30vh;
+  width: 100%;
+  background-color: $color-dark2;
 }
 
-#portfolio .container-fluid .portfolio-box .portfolio-box-caption,
-#portfolio .container-sm .portfolio-box .portfolio-box-caption,
-#portfolio .container-md .portfolio-box .portfolio-box-caption,
-#portfolio .container-lg .portfolio-box .portfolio-box-caption,
-#portfolio .container-xl .portfolio-box .portfolio-box-caption {
+.portfolio-box-img {
+  width: 100%;
+  height: 100%;
+  object-position: 50% 50%;
+  object-fit: cover
+}
+
+.portfolio-box-caption {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,32 +35,22 @@
   text-align: center;
   opacity: 0;
   color: #fff;
-  background: rgba(255, 152, 0, 0.8);
+  background-color: rgba($color-primary, 0.9);
   transition: opacity 0.25s ease;
 }
 
-#portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-category,
-#portfolio .container-sm .portfolio-box .portfolio-box-caption .project-category,
-#portfolio .container-md .portfolio-box .portfolio-box-caption .project-category,
-#portfolio .container-lg .portfolio-box .portfolio-box-caption .project-category,
-#portfolio .container-xl .portfolio-box .portfolio-box-caption .project-category {
-  font-size: 0.85rem;
-  font-weight: 600;
-  text-transform: uppercase;
+.portfolio-box:hover .portfolio-box-caption {
+  opacity: 1;
 }
 
-#portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-name,
-#portfolio .container-sm .portfolio-box .portfolio-box-caption .project-name,
-#portfolio .container-md .portfolio-box .portfolio-box-caption .project-name,
-#portfolio .container-lg .portfolio-box .portfolio-box-caption .project-name,
-#portfolio .container-xl .portfolio-box .portfolio-box-caption .project-name {
+.portfolio-project-name {
   font-size: 1.2rem;
 }
 
-#portfolio .container-fluid .portfolio-box:hover .portfolio-box-caption,
-#portfolio .container-sm .portfolio-box:hover .portfolio-box-caption,
-#portfolio .container-md .portfolio-box:hover .portfolio-box-caption,
-#portfolio .container-lg .portfolio-box:hover .portfolio-box-caption,
-#portfolio .container-xl .portfolio-box:hover .portfolio-box-caption {
-  opacity: 1;
+.portfolio-project-category {
+  font-size: 0.85rem;
 }
+
+
+
+
