Added maps component, moved to material cards

--- a/angular-web-app/src/app/components/_home/home.component.html
+++ b/angular-web-app/src/app/components/_home/home.component.html
@@ -1,15 +1,19 @@
 <!-- Header -->
 <app-header></app-header>
 
-<app-services></app-services>
+<!-- Cards wrapper -->
+<div class="px-3">
+  <!-- Content -->
+  <app-services></app-services>
 
-<app-featured></app-featured>
+  <app-featured></app-featured>
 
-<app-content-title></app-content-title>
+  <app-content-title></app-content-title>
 
-<app-latest></app-latest>
+  <app-latest></app-latest>
 
-<app-call-to-action></app-call-to-action>
+  <app-call-to-action></app-call-to-action>
 
-<app-call-to-action-divider></app-call-to-action-divider>
+  <app-call-to-action-divider></app-call-to-action-divider>
+</div>
 
