--- a/angular-web-app/src/app/components/_layout/footer/footer.component.html
+++ b/angular-web-app/src/app/components/_layout/footer/footer.component.html
@@ -1,9 +1,20 @@
 <!-- Footer-->
 <footer id="site-footer">
-  <section class="section-dark">
+  <section class="dark-light">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 py-5">
+        <div class="col-md-4">
+            <h4 class="title-underlined">Contact us.</h4>
+            <mat-list>
+              <mat-list-item>
+                <mat-icon mat-list-icon class="txt-primary">email</mat-icon>
+                <div mat-line>Email</div>
+                <div mat-line>mail@domain.com</div>
+              </mat-list-item>
+            </mat-list>
+        </div>
+        <div class="col-md-8 py-5">
+          <h4 class="title-underlined">Follow us.</h4>
           <div class="mb-5 flex-center">
             <!-- Facebook -->
             <a class="fb-ic">
@@ -35,7 +46,7 @@
     </div>
   </section>
   <!-- Copyright -->
-  <section class="section-dark2">
+  <section class="dark-light-alt">
     <div class="text-center py-3">© 2020 Spavento Paintings.</div>
   </section>
 </footer>
