--- a/angular-web-app/src/app/components/call-to-action/call-to-action.component.html
+++ b/angular-web-app/src/app/components/call-to-action/call-to-action.component.html
@@ -1,5 +1,5 @@
 <!-- Call to action -->
-<section class="page-section">
+<section class="page-section primary-light">
   <div class="container text-center">
     <h2 class="mb-4">Call To Action</h2>
     <button mat-flat-button>Basic</button>
