--- a/angular-web-app/src/app/components/featured/featured.component.html
+++ b/angular-web-app/src/app/components/featured/featured.component.html
@@ -2,15 +2,15 @@
   <div class="container">
     <h2 class="text-center mt-0">Featured</h2>
     <hr class="divider my-4"/>
-    <div class="row">
+    <div class="row mt-5">
       <div class="col-lg-8 col-md-6">
-        <div class="view mt-5 mat-elevation-z4">
+        <div class="view mat-elevation-z4">
           <img src="https://mdbootstrap.com/img/Photos/Others/img%20(29).jpg" class="img-fluid" alt="smaple image">
         </div>
       </div>
       <div class="col-lg-4 col-md-6 d-flex align-items-center">
-        <div class="mt-5">
-          <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+        <div>
+          <i class="fas fa-4x fa-laptop-code txt-primary mb-4"></i>
           <h3 class="h4 mb-2">Up to Date</h3>
           <mat-divider class="my-2"></mat-divider>
           <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
