--- a/angular-web-app/src/variables.scss
+++ b/angular-web-app/src/variables.scss
@@ -1,9 +1,11 @@
 $color-primary: #607D8B;
+$color-primary-light: #CFD8DC;
+$color-primary-dark: #455A64;
 $color-accent: #FF9800;
 $color-warn: #FF5722;
 $color-dark: #272727;
-$color-dark2: #222;
+$color-dark-alt: #222;
 $color-light: #F8F9FA;
-$color-light2: #F9F9F9;
+$color-light-alt: #F9F9F9;
 $color-primary-txt: #212121;
 $color-secondary-txt: #4f4f4f;
