--- a/angular-web-app/src/app/components/_about/about.component.html
+++ b/angular-web-app/src/app/components/_about/about.component.html
@@ -1,56 +1,9 @@
 <!-- Header small -->
 <app-header-small [title]="title" [subTitle]="subTitle"></app-header-small>
 
-<!-- About-->
-<section class="page-section" id="about">
-  <div class="container">
-    <h2 class="text-center mt-0">At Your Service</h2>
-    <hr class="divider my-4"/>
-    <div class="row">
-      <div class="col-lg-6 col-md-6">
-        <mat-card class="example-card">
-          <mat-card-header>
-            <div mat-card-avatar class="card-header-image"></div>
-            <mat-card-title>Light</mat-card-title>
-            <mat-card-subtitle>Material theme</mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-content>
-            <p>
-              The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-              A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-              bred for hunting.
-            </p>
-          </mat-card-content>
-          <mat-card-actions>
-            <button mat-flat-button>Basic</button>
-            <button mat-flat-button color="primary">Primary</button>
-            <button mat-flat-button color="accent">Accent</button>
-            <button mat-flat-button color="warn">Warn</button>
-          </mat-card-actions>
-        </mat-card>
-      </div>
-      <div class="col-lg-6 col-md-6 spavento-dark">
-        <mat-card class="example-card">
-          <mat-card-header>
-            <div mat-card-avatar class="card-header-image"></div>
-            <mat-card-title>Dark</mat-card-title>
-            <mat-card-subtitle>Material theme</mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-content>
-            <p>
-              The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-              A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-              bred for hunting.
-            </p>
-          </mat-card-content>
-          <mat-card-actions>
-            <button mat-flat-button>Basic</button>
-            <button mat-flat-button color="primary">Primary</button>
-            <button mat-flat-button color="accent">Accent</button>
-            <button mat-flat-button color="warn">Warn</button>
-          </mat-card-actions>
-        </mat-card>
-      </div>
-    </div>
-  </div>
-</section>
+<!-- Cards wrapper -->
+<div class="px-3">
+  <!-- Content -->
+
+</div>
+
