--- a/angular-web-app/src/app/components/_layout/header/header.component.html
+++ b/angular-web-app/src/app/components/_layout/header/header.component.html
@@ -3,12 +3,13 @@
   <div class="container h-100">
     <div class="row h-100 align-items-center justify-content-center text-center">
       <div class="col-lg-10 align-self-end">
-        <h1 class="text-uppercase text-white font-weight-bold">Spavento Paintings</h1>
+        <h1 class="text-uppercase font-weight-bold txt-primary-light">
+          Spavento <span class="txt-primary">Paintings</span>
+        </h1>
         <hr class="divider my-4"/>
-      </div>
-      <div class="col-lg-8 align-self-baseline">
-        <p class="text-white-75 font-weight-light mb-5">Angular app built using bootstrap.</p>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" routerLink="/portfolio" routerLinkActive="router-link-active">Portfolio</a>
+        <button mat-mini-fab color="primary">
+          <i class="fas fa-chevron-down"></i>
+        </button>
       </div>
     </div>
   </div>
