--- a/angular-web-app/src/app/components/_layout/nav/nav.component.html
+++ b/angular-web-app/src/app/components/_layout/nav/nav.component.html
@@ -1,7 +1,7 @@
 <!-- Navigation-->
-<nav class="navbar navbar-expand-md navbar-light fixed-top py-3" id="mainNav">
+<nav class="navbar navbar-expand-md fixed-top py-3" id="mainNav">
   <div class="container">
-    <a class="navbar-brand js-scroll-trigger" routerLink="/home" routerLinkActive="router-link-active">Spavento</a>
+    <a class="navbar-brand" routerLink="/home" routerLinkActive="router-link-active">Spavento</a>
     <button class="navbar-toggler navbar-toggler-right" type="button"
             data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,16 +10,16 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto my-2 my-lg-0">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" routerLink="/home" routerLinkActive="router-link-active">Home</a>
+          <a class="nav-link" routerLink="/home" routerLinkActive="router-link-active">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" routerLink="/portfolio" routerLinkActive="router-link-active">Portfolio</a>
+          <a class="nav-link" routerLink="/portfolio" routerLinkActive="router-link-active">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" routerLink="/about" routerLinkActive="router-link-active">About</a>
+          <a class="nav-link" routerLink="/about" routerLinkActive="router-link-active">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" routerLink="/contact" routerLinkActive="router-link-active">Contact</a>
+          <a class="nav-link" routerLink="/contact" routerLinkActive="router-link-active">Contact</a>
         </li>
       </ul>
     </div>
