--- a/angular-web-app/src/app/components/call-to-action-divider/call-to-action-divider.component.html
+++ b/angular-web-app/src/app/components/call-to-action-divider/call-to-action-divider.component.html
@@ -1,4 +1,4 @@
-<section class="page-section" id="about">
+<section class="page-section accent-light" id="about">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center">
