--- a/angular-web-app/src/app/components/_layout/footer/footer.component.html
+++ b/angular-web-app/src/app/components/_layout/footer/footer.component.html
@@ -1,52 +1,110 @@
 <!-- Footer-->
 <footer id="site-footer">
-  <section class="dark-light">
-    <div class="container">
+  <div class="px-3 dark-light">
+    <div class="theme-container">
       <div class="row">
-        <div class="col-md-4">
-            <h4 class="title-underlined">Contact us.</h4>
-            <mat-list>
-              <mat-list-item>
-                <mat-icon mat-list-icon class="txt-primary">email</mat-icon>
-                <div mat-line>Email</div>
-                <div mat-line>mail@domain.com</div>
-              </mat-list-item>
-            </mat-list>
+
+        <div class="col-lg-4 col-md-12 col-sm-12">
+          <mat-card class="my-3 mat-elevation-z0 dark-light">
+            <mat-card-header>
+              <mat-card-title class="title-underlined">About us.</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-md-12 d-flex align-items-center">
+                    <div class="py-2">
+                      <p>
+                        Duis semper mauris vitae purus rhoncus suscipit. Nunc dictum dapibus tellus, at viverra risus
+                        pharetra id. Nulla facilisi. Ut mollis et augue non gravida. Sed ipsum urna, venenatis ut
+                        vehicula nec, ultrices quis sapien.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </mat-card-content>
+          </mat-card>
         </div>
-        <div class="col-md-8 py-5">
-          <h4 class="title-underlined">Follow us.</h4>
-          <div class="mb-5 flex-center">
-            <!-- Facebook -->
-            <a class="fb-ic">
-              <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-            <!-- Twitter -->
-            <a class="tw-ic">
-              <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-            <!-- Google +-->
-            <a class="gplus-ic">
-              <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-            <!--Linkedin -->
-            <a class="li-ic">
-              <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-            <!--Instagram-->
-            <a class="ins-ic">
-              <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-            <!--Pinterest-->
-            <a class="pin-ic">
-              <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
-            </a>
-          </div>
+
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <mat-card class="my-3 mat-elevation-z0 dark-light">
+            <mat-card-header>
+              <mat-card-title class="title-underlined">Contact us.</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-md-12 d-flex align-items-center">
+                    <div class="py-2">
+                      <mat-list>
+                        <mat-list-item class="dark-light">
+                          <mat-icon mat-list-icon>maps</mat-icon>
+                          <div mat-line>Location</div>
+                          <div mat-line>Kropswolde, Groningen</div>
+                        </mat-list-item>
+                        <mat-list-item class="dark-light">
+                          <mat-icon mat-list-icon>email</mat-icon>
+                          <div mat-line>Email</div>
+                          <div mat-line>mail@domain.com</div>
+                        </mat-list-item>
+                        <mat-list-item class="dark-light">
+                          <mat-icon mat-list-icon>phone</mat-icon>
+                          <div mat-line>Phone</div>
+                          <div mat-line>06 12345678</div>
+                        </mat-list-item>
+                      </mat-list>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </mat-card-content>
+          </mat-card>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <mat-card class="my-3 mat-elevation-z0 dark-light">
+            <mat-card-header>
+              <mat-card-title class="title-underlined">Follow us.</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-md-12 d-flex align-items-center">
+                    <div class="py-2 full-width">
+                      <mat-list>
+                        <mat-list-item class="dark-light">
+                          <!-- facebook, twitter, instagram -->
+                          <a class="footer-social-icon"><i class="fab fa-facebook-f fa-lg fa-2x"></i></a>
+                          <a class="footer-social-icon"><i class="fab fa-twitter fa-lg fa-2x"></i></a>
+                          <a class="footer-social-icon"><i class="fab fa-instagram fa-lg fa-2x"></i></a>
+                        </mat-list-item>
+                        <mat-list-item class="dark-light">
+                          <!-- linkedin, g+, pin -->
+                          <a class="footer-social-icon"><i class="fab fa-linkedin-in fa-lg fa-2x"></i></a>
+                          <a class="footer-social-icon"><i class="fab fa-google-plus-g fa-lg fa-2x"></i></a>
+                          <a class="footer-social-icon"><i class="fab fa-pinterest fa-lg fa-2x"></i></a>
+                        </mat-list-item>
+                      </mat-list>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </mat-card-content>
+          </mat-card>
         </div>
       </div>
+
     </div>
-  </section>
+  </div>
+
   <!-- Copyright -->
-  <section class="dark-light-alt">
-    <div class="text-center py-3">© 2020 Spavento Paintings.</div>
-  </section>
+  <div class="px-3 dark-light-alt">
+    <div class="theme-container">
+      <div class="row flex-center">
+        <div class="text-center py-3">© 2020 Spavento Paintings.</div>
+      </div>
+    </div>
+  </div>
+
 </footer>
