--- a/angular-web-app/src/variables.scss
+++ b/angular-web-app/src/variables.scss
@@ -9,3 +9,4 @@ $color-light: #F8F9FA;
 $color-light-alt: #F9F9F9;
 $color-primary-txt: #212121;
 $color-secondary-txt: #4f4f4f;
+$color-mat-dark: #424242;
