--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -11,6 +11,15 @@ html, body {
   font-family: 'Roboto', sans-serif;
 }
 
+.theme-container {
+  width: 100%;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  box-sizing: border-box;
+}
+
 .page-section {
   padding: 4rem 0;
 }
@@ -57,6 +66,10 @@ hr.divider {
   width: 3.25rem;
   background-color: $color-accent;
   margin: 1rem 0;
+}
+
+.full-width {
+  width: 100%;
 }
 
 /*************************************/
